--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Types de mission</h1>
+        <h1 class="my-4">Les types de missions</h1>
         <div class="list-group">
           <a href="#" class="list-group-item">🏨 Frais de santé</a>
           <a href="#" class="list-group-item">🍲 Alimentation</a>
